syntax = "proto3";
option cc_enable_arenas = true;
package sss.async;

message AsyncNodeDef {
    string func_name = 1;
    repeated string input_names = 2;
    repeated string output_names = 3;
}